--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tech Services</title>
-    <img src="img/trustConnect.png">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,7 +13,7 @@
     <!-- NAVIGATION -->
     <div class="w3-top">
       <div class="w3-bar w3-black">
-        <span class="branding w3-bar-item w3-mobile">Tech Services</span>
+        <span class="branding w3-bar-item w3-mobile"><img style ="position: center" src="img/trustConnect.png"></span>
         <span class="w3-right w3-mobile">
           <a class="w3-bar-item w3-button w3-mobile w3-hover-red" href="#">Home</a>
           <a class="w3-bar-item w3-button w3-mobile w3-hover-red" href="#about">About</a>
